--- a/web/templates/web/domains/importer/view.html
+++ b/web/templates/web/domains/importer/view.html
@@ -63,7 +63,7 @@
     {% endwith %}
   {% endif %}
 
-  {% with read_only = True, can_manage_contacts = False %}
+  {% with read_only = True, can_manage_contacts = False, is_user_org_admin = False %}
     {% include "partial/contacts/contacts.html" %}
   {% endwith %}
 {% endblock %}
