ECIL-255 Fix view in progress CFS applications.
Changes:
  - Fix show_eu_fields optional datetime comparision
  - Fix application_field macro rendering "None" instead of default.
  - FIx all view export application templates from rendering "None".

--- a/web/templates/display/fields.html
+++ b/web/templates/display/fields.html
@@ -18,10 +18,14 @@
     </div>
     <div class="six columns">
         <span class="text-widget {% if field_span_classes %}{{ field_span_classes }}{% endif %}">
-          {% if is_safe_html %}
-            {{ field | safe}}
+          {% if field != None %}
+            {% if is_safe_html %}
+              {{ field | safe}}
+            {% else %}
+              {{ field | nl2br }}
+            {% endif %}
           {% else %}
-            {{ field | nl2br or default }}
+            {{ default }}
           {% endif %}
         </span>
     </div>
