--- a/web/templates/web/domains/case/export/gmp-view.html
+++ b/web/templates/web/domains/case/export/gmp-view.html
@@ -9,25 +9,25 @@
   {% endcall %}
 
   {% call application_section("Responsible Person") %}
-    {{ application_field(process.is_responsible_person|capitalize, process|verbose_name('is_responsible_person'))}}
+    {{ application_field(process.get_is_responsible_person_display(), process|verbose_name('is_responsible_person'))}}
     {{ application_field(process.responsible_person_name, "Name")}}
     {{ application_field(process.responsible_person_address, "Address")}}
     {{ application_field(process.responsible_person_postcode, "Postcode")}}
-    {{ application_field(process.CountryType[process.responsible_person_country].label, "Country")}}
+    {{ application_field(process.get_responsible_person_country_display(), "Country")}}
   {% endcall %}
 
   {% call application_section("Manufacturer") %}
-    {{ application_field(process.is_manufacturer|capitalize, process|verbose_name('is_manufacturer'))}}
+    {{ application_field(process.get_is_manufacturer_display(), process|verbose_name('is_manufacturer'))}}
     {{ application_field(process.manufacturer_name, "Name")}}
     {{ application_field(process.manufacturer_address, "Address")}}
     {{ application_field(process.manufacturer_postcode, "Postcode")}}
-    {{ application_field(process.CountryType[process.manufacturer_country].label, "Country")}}
+    {{ application_field(process.get_manufacturer_country_display(), "Country")}}
   {% endcall %}
 
   {% call application_section("Manufacturing Certificates") %}
     {{ application_field(process.gmp_certificate_issued, process|verbose_name('gmp_certificate_issued'))}}
-    {{ application_field(process.auditor_accredited|capitalize, process|verbose_name('auditor_accredited'))}}
-    {{ application_field(process.auditor_certified|capitalize, process|verbose_name('auditor_certified'))}}
+    {{ application_field(process.get_auditor_accredited_display(), process|verbose_name('auditor_accredited'))}}
+    {{ application_field(process.get_auditor_certified_display(), process|verbose_name('auditor_certified'))}}
   {% endcall %}
 
   {% call application_section("Supporting Documents") %}
