--- a/web/templates/web/domains/case/export/cfs-edit.html
+++ b/web/templates/web/domains/case/export/cfs-edit.html
@@ -15,7 +15,7 @@
   <div class="info-box info-box-info">
     This form is in respect of the Exporting Company. Please provide all the
     information requested. The information will be used to create a Certificate
-    of Free Sale and a legal declaration in the form of a Schedule. You must save your information then select 
+    of Free Sale and a legal declaration in the form of a Schedule. You must save your information then select
     another section to move through the application.
   </div>
 
@@ -23,6 +23,12 @@
   {% include "partial/case/application-contact-details.html" %}
 
   <h4>Countries</h4>
+  {% if cptpp_countries_list %}
+    <div class="info-box info-box-info">
+      Please note that Certificates of Free Sale (CFS) for cosmetic products are no longer required for {{ cptpp_countries_list }} following UK accession to
+      <a href="https://www.gov.uk/government/collections/the-uk-and-the-comprehensive-and-progressive-agreement-for-trans-pacific-partnershipcptpp">CPTPP</a>
+    </div>
+  {% endif %}
   {{ fields.field(form.countries) }}
 {% endblock %}
 
