--- a/web/templates/web/domains/cat/base_form.html
+++ b/web/templates/web/domains/cat/base_form.html
@@ -43,6 +43,14 @@
           <div id="template_country-wrapper" {% if not show_template_country %} style="display: none"{% endif %}>
             {{ fields.field(field, show_optional_indicator=False) }}
           </div>
+        {% elif application_type == "CFS" and field.name == "countries" %}
+          {% if cptpp_countries_list %}
+            <div class="info-box info-box-info">
+              Please note that Certificates of Free Sale (CFS) for cosmetic products are no longer required for {{ cptpp_countries_list }} following UK accession to
+              <a href="https://www.gov.uk/government/collections/the-uk-and-the-comprehensive-and-progressive-agreement-for-trans-pacific-partnershipcptpp">CPTPP</a>
+            </div>
+            {{ fields.field(field) }}
+          {% endif %}
         {% else %}
           {{ fields.field(field) }}
         {% endif %}
