ECIL-427 Update CPTPP content only for selected countries

--- a/web/templates/web/domains/case/export/partials/cfs/edit-schedule-form-content.html
+++ b/web/templates/web/domains/case/export/partials/cfs/edit-schedule-form-content.html
@@ -5,8 +5,8 @@
 {% if cptpp_countries_list %}
   <div id="cptpp-warning-wrapper" class="info-box info-box-warning" {% if not show_cptpp_warning %}style="display: none"{% endif %}>
     <p>
-      A Certificate of Free Sale (CFS) for cosmetic products is no longer required for {{ cptpp_countries_list }}
-      due to the UK’s accession to the Comprehensive and Progressive Agreement for Trans-Pacific Partnership (CPTPP).
+      A Certificate of Free Sale (CFS) for cosmetic products is no longer required for {{ cptpp_countries_list }} due to the UK’s accession to the
+      <a href="https://www.gov.uk/government/collections/the-uk-and-the-comprehensive-and-progressive-agreement-for-trans-pacific-partnershipcptpp">Comprehensive and Progressive Agreement for Trans-Pacific Partnership</a> (CPTPP).
     </p>
     <p>
       Please contact <a href="mailto:{{ ilb_contact_email }}">{{ ilb_contact_email }}</a> if you encounter any problems or are
