--- a/web/templates/web/domains/case/export/cfs-edit.html
+++ b/web/templates/web/domains/case/export/cfs-edit.html
@@ -9,6 +9,8 @@
 
 {% block page_js %}
   {{ form.media.js }}
+  <script id="country_config" type="application/json">{{ country_config|tojson }}</script>
+  <script src="{{ static('web/js/pages/cfs-edit.js') }}" type="text/javascript"></script>
 {% endblock %}
 
 {% block form_content %}
@@ -24,9 +26,9 @@
 
   <h4>Countries</h4>
   {% if cptpp_countries_list %}
-    <div class="info-box info-box-info">
-      Please note that Certificates of Free Sale (CFS) for cosmetic products are no longer required for {{ cptpp_countries_list }} following UK accession to
-      <a href="https://www.gov.uk/government/collections/the-uk-and-the-comprehensive-and-progressive-agreement-for-trans-pacific-partnershipcptpp">CPTPP</a>
+    <div id="cptpp-banner" class="info-box info-box-info"{% if not show_cptpp_warning %} style="display: none"{% endif %}>
+      A Certificate of Free Sale (CFS) for cosmetic products is no longer needed for <span id="selected-cptpp"></span> following the UK’s accession to the
+      <a href="https://www.gov.uk/government/collections/the-uk-and-the-comprehensive-and-progressive-agreement-for-trans-pacific-partnershipcptpp">Comprehensive and Progressive Agreement for Trans-Pacific Partnership</a> (CPTPP).
     </div>
   {% endif %}
   {{ fields.field(form.countries) }}
