--- a/web/templates/web/menu/menu.html
+++ b/web/templates/web/menu/menu.html
@@ -43,12 +43,12 @@
 </ul>
 {% if SHOW_ENVIRONMENT_INFO %}
   <div data-testid="environment_banner" id="environment_banner">
-    Environment: {{ CURRENT_ENVIRONMENT }}
+    Environment: <strong>{{ CURRENT_ENVIRONMENT }}</strong>
     <br>
-    Branch: {{ CURRENT_BRANCH }}
+    Branch: <strong>{{ CURRENT_BRANCH }}</strong>
     {% if CURRENT_TAG %}
       <br>
-      Tag: {{ CURRENT_TAG }}
+      Tag: <strong>{{ CURRENT_TAG }}</strong>
     {% endif %}
   </div>
 {% endif %}
