--- a/web/templates/web/domains/case/import/manage/add-endorsement.html
+++ b/web/templates/web/domains/case/import/manage/add-endorsement.html
@@ -2,7 +2,6 @@
 {% import "forms/forms.html" as forms %}
 {% import "forms/fields.html" as fields %}
 
-
 {% block content_actions_link %}
   <a
     href="{{ icms_url('case:prepare-response', kwargs={'case_type': case_type, 'application_pk': process.pk}) }}"
@@ -17,7 +16,11 @@
     {% for field in form %}
       {{ fields.field(field, show_optional_indicator=False) }}
     {% endfor %}
-
+    <div class="row">
+      <div class="three columns"></div>
+      <div class="six columns" id="endorsement-text"></div>
+      <div class="three columns"> </div>
+    </div>
     <div class="container">
       <div class="row">
         <div class="three columns"></div>
@@ -34,4 +37,12 @@
       </div>
     </div>
   {% endcall %}
+{% endblock %}
+
+{% block page_js %}
+  <script nonce="{{ request.csp_nonce }}" type="application/javascript">
+    const endorsementTextURL = "{{ icms_url("import:get-endorsement-text") }}"
+  </script>
+  <script src="{{ static('web/js/api/endorsement-text-lookup.js') }}" type="text/javascript"></script>
+  <script src="{{ static('web/js/pages/endorsement.js') }}" type="text/javascript"></script>
 {% endblock %}
