ECIL-340 - As a user, I need to be able to review my cookie acceptance

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -114,6 +114,9 @@
           <div class="footer-link">
             <a href="{{ icms_url('support:landing') }}" target="_blank">Help and support</a>
           </div>
+          <div class="footer-link">
+            <a href="{{ icms_url('cookie-consent') }}">Cookies</a>
+          </div>
       {% endblock %}
     </footer>
 
