--- a/web/templates/web/cookie-consent.html
+++ b/web/templates/web/cookie-consent.html
@@ -56,6 +56,17 @@
                 1 year
               </td>
             </tr>
+            <tr>
+              <td>
+                accepted_ga_cookies
+              </td>
+              <td>
+                Whether you have accepted analytics cookies
+              </td>
+              <td>
+                1 year
+              </td>
+            </tr>
           </tbody>
         </table>
 
@@ -69,39 +80,6 @@
           <li>the pages you visit on GOV.UK and government digital services, and how long you spend on each page</li>
           <li>what you click on while you're visiting the site</li>
         </ul>
-        <table class="setoutList">
-          <thead>
-            <tr>
-              <th>Name</th>
-              <th>Purpose</th>
-              <th>Expires</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>
-                _ga
-              </td>
-              <td>
-                  Checks if you’ve visited {{ request.site.name }} before. This helps us count how many people visit our site.
-              </td>
-              <td>
-                2 years
-              </td>
-            </tr>
-            <tr>
-              <td>
-                _gid
-              </td>
-              <td>
-                  Checks if you’ve visited {{ request.site.name }} before. This helps us count how many people visit our site.
-              </td>
-              <td>
-                24 hours
-              </td>
-            </tr>
-          </tbody>
-        </table>
       </div>
     </div>
     <div class="row">
