ECIL-491 - 53. Remove either link to “Exporter” within the left-hand task bar, as well as the link at the top of the page “< Exporter”.

--- a/web/templates/web/domains/exporter/edit.html
+++ b/web/templates/web/domains/exporter/edit.html
@@ -9,11 +9,13 @@
 {% endblock %}
 
 {% block content_actions %}
-  <div class="content-actions">
-    <ul class="menu-out flow-across">
-      <li><a href="{{ parent_url }}" class="prev-link">Exporters</a></li>
-    </ul>
-  </div>
+  {% if show_content_actions %}
+    <div class="content-actions">
+      <ul class="menu-out flow-across">
+        <li><a href="{{ parent_url }}" class="prev-link">Exporters</a></li>
+      </ul>
+    </div>
+  {% endif %}
 {% endblock %}
 
 {% block context_header %}
