--- a/web/templates/web/domains/exporter/detail.html
+++ b/web/templates/web/domains/exporter/detail.html
@@ -1,11 +1,13 @@
 {% extends base_template %}
 
 {% block content_actions %}
-  <div class="content-actions">
-    <ul class="menu-out flow-across">
-      <li><a href="{{ parent_url }}" class="prev-link">Exporters</a></li>
-    </ul>
-  </div>
+  {% if show_content_actions %}
+    <div class="content-actions">
+      <ul class="menu-out flow-across">
+        <li><a href="{{ parent_url }}" class="prev-link">Exporters</a></li>
+      </ul>
+    </div>
+  {% endif %}
 {% endblock %}
 
 {% block context_header %}
