ECIL-572 Add exporter login start page.
Changes:
  - Add temporary menu item to see new views.
  - Add exporter login start view.
  - Refactor all ecil views to views_example.py

--- a/web/templates/ecil/base.html
+++ b/web/templates/ecil/base.html
@@ -14,6 +14,15 @@
   {{ gds.govukHeader({ "productName": request.site.name }) }}
 {% endblock %}
 
+{% block beforeContent %}
+  {{
+    gds.govukPhaseBanner({
+      "tag": {"text": "Alpha"},
+      "html": 'This is a new service. Your <a class="govuk-link" href="#">feedback</a> will help us improve it.'
+    })
+  }}
+{% endblock %}
+
 {% block footer %}
   {{ gds.govukFooter({
         "meta": {
