Add missing company details list item.

--- a/web/templates/ecil/new_user/exporter_login_start.html
+++ b/web/templates/ecil/new_user/exporter_login_start.html
@@ -9,6 +9,7 @@
   <ul class="govuk-list govuk-list--bullet">
     <li>which certificate you need</li>
     <li>your details</li>
+    <li>company details</li>
     <li>the type of products you want to export</li>
     <li>where you want to export to</li>
   </ul>
