--- a/web/templates/partial/exporter/sidebar.html
+++ b/web/templates/partial/exporter/sidebar.html
@@ -14,10 +14,12 @@
       {% endif %}
     </li>
   </ul>
-  <h5>Create</h5>
-  <ul class="menu-out">
-    <li>
-      <a href="{{ icms_url('exporter-create') }}">Exporter</a>
-    </li>
-  </ul>
+  {% if show_create_links|default(False) %}
+    <h5>Create</h5>
+    <ul class="menu-out">
+      <li>
+        <a href="{{ icms_url('exporter-create') }}">Exporter</a>
+      </li>
+    </ul>
+  {% endif %}
 {% endblock %}
