--- a/web/templates/web/domains/exporter/list.html
+++ b/web/templates/web/domains/exporter/list.html
@@ -2,5 +2,6 @@
 {% block empty_message %}There aren't any exporters that match your search{% endblock %}
 
 {% block sidebar %}
+    {% set show_create_links = True %}
     {% include "partial/exporter/sidebar.html" %}
 {% endblock %}
