--- a/web/templates/ecil/gds_test_page.html
+++ b/web/templates/ecil/gds_test_page.html
@@ -6,7 +6,7 @@
   {{ gds.govukHeader({"productName": "Apply for an export certificate"}) }}
 {% endblock %}
 
-{% block content %}
+{% block ecil_content %}
   <h1 class="govuk-heading-l">Apply for an export certificate</h1>
   <p class="govuk-body">Use this service to apply for a certificate for use in overseas markets to provide assurance on specific products.</p>
   <h2 class="govuk-heading-m">Certificate of Free Sale (CFS)</h2>
