--- a/web/templates/ecil/list.html
+++ b/web/templates/ecil/list.html
@@ -1,6 +1,6 @@
 {% extends "ecil/base.html" %}
 
-{% block content %}
+{% block ecil_content %}
   {% for instance in object_list %}
     <p>{{ instance }}</p>
   {% endfor %}
