--- a/web/templates/ecil/new_user/exporter_login_start.html
+++ b/web/templates/ecil/new_user/exporter_login_start.html
@@ -1,6 +1,6 @@
 {% extends "ecil/base.html" %}
 
-{% block content %}
+{% block ecil_content %}
   <h1 class="govuk-heading-l">{{ request.site.name }}</h1>
   <p class="govuk-body">Before you can apply for an export certificate, you need to request access and provide some basic information.</p>
   <p class="govuk-body">You should use your company email address to create an account or sign in to GOV.UK One Login.</p>
