--- a/web/templates/ecil/new_user/exporter_triage_something_else.html
+++ b/web/templates/ecil/new_user/exporter_triage_something_else.html
@@ -1,6 +1,6 @@
 {% extends "ecil/base.html" %}
 
-{% block content %}
+{% block ecil_content %}
   <h1 class="govuk-heading-l">Do you need to export any of these products?</h1>
   <p class="govuk-body">To export any of these products, you will need to visit the correct service.</p>
   <p class="govuk-body">An export certificate for:</p>
