--- a/web/templates/ecil/access_request/exporter_company_details-step.html
+++ b/web/templates/ecil/access_request/exporter_company_details-step.html
@@ -7,9 +7,11 @@
 {% endblock %}
 
 {% block ecil_content %}
+  <h1 class="govuk-heading-l">What are the company’s details?</h1>
+  <p class="govuk-body"><a href="#" class="govuk-link" target="_blank" rel="noopener noreferrer">Find company details on Companies House</a></p>
   <form {% if form.is_multipart %} enctype="multipart/form-data" {% endif %} method="post" action="">
     {{ csrf_input }}
     {{ form }}
-    {{ gds.govukButton({ "text": "Submit", "type": "submit" }) }}
+    {{ gds.govukButton({ "text": "Continue", "type": "submit" }) }}
   </form>
 {% endblock %}
