--- a/web/templates/ecil/gds_form.html
+++ b/web/templates/ecil/gds_form.html
@@ -1,9 +1,20 @@
 {% extends "ecil/base.html" %}
 
-{% block content %}
+{% block ecil_content %}
   <form {% if form.is_multipart %} enctype="multipart/form-data" {% endif %} method="post" action="">
     {{ csrf_input }}
     {{ form }}
     {{ gds.govukButton({ "text": "Submit", "type": "submit" }) }}
   </form>
+{% endblock %}
+
+{% block bodyEnd %}
+  {{ super() }}
+  <script type="module" nonce="{{ request.csp_nonce }}">
+    accessibleAutocomplete.enhanceSelectElement({
+      defaultValue: '',
+      selectElement: document.querySelector('#id_autocomplete_select'),
+      menuClasses: "govuk-body",
+    })
+  </script>
 {% endblock %}
