--- a/web/templates/ecil/new_user/update_name.html
+++ b/web/templates/ecil/new_user/update_name.html
@@ -1,6 +1,6 @@
 {% extends "ecil/base.html" %}
 
-{% block content %}
+{% block ecil_content %}
   <p class="govuk-heading-l">What is your name?</p>
   <form {% if form.is_multipart %} enctype="multipart/form-data" {% endif %} method="post" action="">
     {{ csrf_input }}
