--- a/web/templates/web/domains/importer/list.html
+++ b/web/templates/web/domains/importer/list.html
@@ -3,5 +3,6 @@
 {% block empty_message %}There aren't any importers that match your search{% endblock %}
 
 {% block sidebar %}
+    {% set show_create_links = True %}
     {% include "partial/importer/sidebar.html" %}
 {% endblock %}
