ECIL-580 Fix Add country button label.

--- a/web/templates/ecil/access_request/exporter_countries-step.html
+++ b/web/templates/ecil/access_request/exporter_countries-step.html
@@ -13,7 +13,7 @@
 
     {# TODO: Use preventDoubleClick on all submit buttons #}
     {{ gds.govukButton({
-      "text": "Add Country",
+      "text": "Add country",
       "name": "action",
       "value": "add-country",
       "classes": "govuk-button--secondary govuk-!-display-block",
