--- a/web/templates/ecil/gds_summary_list.html
+++ b/web/templates/ecil/gds_summary_list.html
@@ -1,14 +1,24 @@
 {% extends "ecil/base.html" %}
 
 {% block ecil_content %}
-    {# Show an error summary if the submit button is pressed without fully valid data #}
-    {% if error_summary_kwargs %}
-      {{ gds.govukErrorSummary(error_summary_kwargs) }}
-    {% endif %}
+  {# Show an error summary if the submit button is pressed without fully valid data #}
+  {% if error_summary_kwargs %}
+    {{ gds.govukErrorSummary(error_summary_kwargs) }}
+  {% endif %}
 
+  {% if summary_cards %}
+    {# Iterate over the summary_cards #}
+    {% for summary_list_kwargs in summary_cards %}
+      {{ gds.govukSummaryList(summary_list_kwargs) }}
+    {% endfor %}
+  {% else %}
+    {# Fallback to the summary_list_kwargs #}
     {{ gds.govukSummaryList(summary_list_kwargs) }}
-    <form method="post" action="">
-      {{ csrf_input }}
-      {{ gds.govukButton({ "text": "Submit", "type": "submit" }) }}
-    </form>
+  {% endif %}
+
+  {# Form to save the access request #}
+  <form method="post" action="">
+    {{ csrf_input }}
+    {{ gds.govukButton({ "text": "Submit", "type": "submit" }) }}
+  </form>
 {% endblock %}
