ECIl-596 EU Firearms Regulation application changes.
Changes:
  - Add command to add Great Britain country.
  - Add Great Britain to FA-SIL COC country group.
  - Add FA-SIL NI goods view.
  - Allow ILB to modify NI goods in response prep view.
  - Add NI goods to FA-SIL licence PDF.
  - Send NI goods to CHIEF as part of FA-SIL payload.

--- a/web/templates/web/domains/case/import/fa-sil/choose-goods-section.html
+++ b/web/templates/web/domains/case/import/fa-sil/choose-goods-section.html
@@ -64,6 +64,16 @@
           </a>
         </li>
       {% endif %}
+
+      {% if process.section_ni %}
+        <li>
+          <a
+            href="{{ icms_url('import:fa-sil:add-section', kwargs={'application_pk': process.pk, 'sil_section_type': 'section_ni'}) }}">
+            NI
+          </a>
+        </li>
+      {% endif %}
+
     </ul>
   {% else %}
     <div class="info-box info-box-warning">
