--- a/web/templates/web/domains/case/import/fa-sil/view.html
+++ b/web/templates/web/domains/case/import/fa-sil/view.html
@@ -107,6 +107,7 @@
       {% include "web/domains/case/import/fa-sil/goods/section582-obsolete-boxes.html" %}
       {% include "web/domains/case/import/fa-sil/goods/section582-other-boxes.html" %}
       {% include "web/domains/case/import/fa-sil/goods/section_legacy-boxes.html" %}
+      {% include "web/domains/case/import/fa-sil/goods/section_ni-boxes.html" %}
     {% endwith %}
   {% endcall %}
 
