--- a/web/templates/web/domains/case/import/fa-sil/edit.html
+++ b/web/templates/web/domains/case/import/fa-sil/edit.html
@@ -20,6 +20,7 @@
   <div id="other-description-wrapper" {% if not process.section58_other %} style="display: none"{% endif %}>
     {{ fields.field(form.other_description, show_optional_indicator=False) }}
   </div>
+  {{ fields.field(form.section_ni, show_optional_indicator=False) }}
   <hr />
 
   {{ fields.field(form.origin_country, show_optional_indicator=False) }}
