--- a/web/templates/web/domains/case/import/fa-sil/goods/list.html
+++ b/web/templates/web/domains/case/import/fa-sil/goods/list.html
@@ -16,5 +16,6 @@
     {% include "web/domains/case/import/fa-sil/goods/section5-boxes.html" %}
     {% include "web/domains/case/import/fa-sil/goods/section582-obsolete-boxes.html" %}
     {% include "web/domains/case/import/fa-sil/goods/section582-other-boxes.html" %}
+    {% include "web/domains/case/import/fa-sil/goods/section_ni-boxes.html" %}
   {% endwith %}
 {% endblock main_content %}
