--- a/web/templates/ecil/new_user/exporter_triage_something_else.html
+++ b/web/templates/ecil/new_user/exporter_triage_something_else.html
@@ -5,14 +5,29 @@
   <p class="govuk-body">To export any of these products, you will need to visit the correct service.</p>
   <p class="govuk-body">An export certificate for:</p>
   <ul class="govuk-list govuk-list--bullet">
-    <li>medical devices - <a href="#" class="govuk-link"target="_blank" rel="noopener noreferrer">Medical and Healthcare Products Regulatory Agency (MHRA)</a></li>
-    <li>biocides - <a href="#" class="govuk-link"target="_blank" rel="noopener noreferrer">Health and Safety Executive (HSE)</a></li>
-    <li>medicines for human use - <a href="#" class="govuk-link"target="_blank" rel="noopener noreferrer">Department of Health and Social Care (DHSC)</a></li>
-    <li>products that animals have contact with, such as veterinary medicines - <a href="#" class="govuk-link"target="_blank" rel="noopener noreferrer">Department for Environment, Food and Rural Affairs (DEFRA)</a></li>
-    <li>foods, drinks and supplements - <a href="#" class="govuk-link"target="_blank" rel="noopener noreferrer">Rural Payments Agency (RPA)</a></li>
-    <li>pesticides on free sale in the UK - <a href="#" class="govuk-link"target="_blank" rel="noopener noreferrer">Health and Safety Executive (HSE)</a></li>
+    <li>
+      medical devices -
+      <a href="https://aic.mhra.gov.uk/cfs/cfssystem.nsf/frmlogin" class="govuk-link" target="_blank" rel="noopener noreferrer">Medical and Healthcare Products Regulatory Agency (MHRA)</a>
+      and
+      <a href="https://www.gov.uk/guidance/export-medical-devices-special-rules" class="govuk-link" target="_blank" rel="noopener noreferrer">guidance on exporting medical devices (GOV.UK)</a>
+    </li>
+    <li>biocides - <a href="https://www.hse.gov.uk/biocides/index.htm" class="govuk-link" target="_blank" rel="noopener noreferrer">Health and Safety Executive (HSE)</a></li>
+    <li>medicines for human use - <a href="https://www.gov.uk/government/organisations/medicines-and-healthcare-products-regulatory-agency" class="govuk-link" target="_blank" rel="noopener noreferrer">Medicines and Healthcare products Regulatory Agency (MHRA)</a></li>
+    <li>
+      products that animals have contact with, such as veterinary medicines -
+      <a href="https://www.gov.uk/government/organisations/veterinary-medicines-directorate" class="govuk-link" target="_blank" rel="noopener noreferrer">Veterinary Medicines Directorate (GOV.UK)</a>
+      and
+      <a href="https://www.gov.uk/guidance/export-drugs-and-medicines-special-rules#animal-medicines" class="govuk-link" target="_blank" rel="noopener noreferrer">guidance on export certificates for medicines for animals (GOV.UK)</a>
+    </li>
+    <li>
+      foods, drinks and supplements -
+      <a href="https://www.gov.uk/guidance/contact-defra" class="govuk-link" target="_blank" rel="noopener noreferrer">Rural Payments Agency (RPA)</a>
+      and
+      <a href="http://www.food.gov.uk/foodindustry/imports/" class="govuk-link" target="_blank" rel="noopener noreferrer">guidance on the food standards agency</a>
+    </li>
+    <li>pesticides on free sale in the UK - <a href="https://www.hse.gov.uk/pesticides/" class="govuk-link" target="_blank" rel="noopener noreferrer">Health and Safety Executive (HSE)</a></li>
   </ul>
-  <p class="govuk-body">Visit <a href="#" class="govuk-link"target="_blank" rel="noopener noreferrer">SPIRE through Department for Business and Trade</a> if you need an export licence for:</p>
+  <p class="govuk-body">Visit <a href="https://www.spire.trade.gov.uk/spire/fox/espire/LOGIN/login" class="govuk-link" target="_blank" rel="noopener noreferrer">SPIRE through Department for Business and Trade</a> if you need an export licence for:</p>
   <ul class="govuk-list govuk-list--bullet">
     <li>security items</li>
     <li>military and civilian use firearms</li>
@@ -20,6 +35,6 @@
     <li>radioactive products</li>
     <li>classified information</li>
   </ul>
-  <p class="govuk-body">For all other export products, visit <a href="#" class="govuk-link" target="_blank" rel="noopener noreferrer">Department for Business and Trade guidance</a>.
+  <p class="govuk-body">For all other export products, visit <a href="https://www.gov.uk/guidance/apply-for-an-export-certificate" class="govuk-link" target="_blank" rel="noopener noreferrer">Department for Business and Trade guidance</a>.
   <p class="govuk-body">If you are still not sure what certificate you need, contact Import Licensing Branch at <a href="mailto:{{ ilb_contact_email }}" class="govuk-link govuk-link--text-colour">{{ ilb_contact_email }}</a></p>
 {% endblock %}
