ECIL-587 Add missing ECIL form validation and error messages.
Changes:
  - Limit list of export countries to 40.
  - Change ExporterAccessRequestExportCountriesForm export_countries label
    and required error message.
  - Add OneLoginNewUserUpdateForm first_name & last_name required error
    message.
  - Add ExporterTriageForm applications required error message.
  - Add Fake Continue button when no export countries are chosen to trigger
    correct error message.

--- a/web/templates/ecil/access_request/exporter_countries-step.html
+++ b/web/templates/ecil/access_request/exporter_countries-step.html
@@ -7,19 +7,25 @@
 
     {# TODO: Use preventDoubleClick on all submit buttons #}
     {{ gds.govukButton({
-      "text": "Add country",
+      "text": "Add country or territory ",
       "name": "action",
       "value": "add-country",
       "classes": "govuk-button--secondary govuk-!-display-block",
       "type": "submit"
       })
     }}
+    {% if not export_countries %}
+      {# If there are no export countries show a fake continue button to submit the main form #}
+      {# This ensures the error message is shown to populate the form #}
+      {{ gds.govukButton({"text": "Continue"})}}
+    {% endif %}
   </form>
 
+  {# When export countries have been selected show a real button to the summary page. #}
   {% if export_countries %}
     {{ gds.govukTable(govuk_table_kwargs) }}
+    {{ gds.govukButton({"text": "Continue", "href": summary_url})}}
   {% endif %}
-  {{ gds.govukButton({"text": "Continue", "href": summary_url})}}
 {% endblock %}
 
 {% block bodyEnd %}
