--- a/web/templates/ecil/access_request/agent_exporter_company_details_step.html
+++ b/web/templates/ecil/access_request/agent_exporter_company_details_step.html
@@ -1,7 +1,7 @@
 {% extends "ecil/base.html" %}
 
 {% block ecil_content %}
-  <h1 class="govuk-heading-l">What are the exporters company's details?</h1>
+  <h1 class="govuk-heading-l">What are the exporter company's details?</h1>
   <p class="govuk-body">These are the details of the company you are applying on behalf of</p>
   <form {% if form.is_multipart %} enctype="multipart/form-data" {% endif %} method="post" action="">
     {{ csrf_input }}
