--- a/web/templates/ecil/gds_summary_list.html
+++ b/web/templates/ecil/gds_summary_list.html
@@ -19,6 +19,6 @@
   {# Form to save the access request #}
   <form method="post" action="">
     {{ csrf_input }}
-    {{ gds.govukButton({ "text": "Submit", "type": "submit" }) }}
+    {{ gds.govukButton({ "text": submit_btn_label|default("Submit"), "type": "submit" }) }}
   </form>
 {% endblock %}
