--- a/web/templates/ecil/access_request/exporter_company_details_step.html
+++ b/web/templates/ecil/access_request/exporter_company_details_step.html
@@ -1,5 +1,5 @@
 {% extends "ecil/gds_form.html" %}
 
 {% block ecil_content_before_form %}
-  <p class="govuk-heading-l">What is your name?</p>
+  <h1 class="govuk-heading-l">What are the company’s details?</h1>
 {% endblock %}
